Fix search on mobile header navigation close #242

--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -225,7 +225,7 @@ a.button {
 
 .page-search-form__button {
   margin-left: 12px;
-  min-height: 42px;
+  min-height: $height-form-elements;
 
   @include media("≥desktop") {
     margin-left: 30px;
