--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -66,7 +66,7 @@ $form-element-padding: $btn-padding !default;
 $form-element-border-color: $black !default;
 $form-element-focus-border-color: $d-gray !default;
 $placeholder-color: $color-body-text !default;
-$height-form-elements: 40px;
+$height-form-elements: 44px;
 $height-button-large: 48px;
 $height-button-medium: 40px;
 $height-button-small: 32px;
